# aismell

./: .gitignore  LICENSE  README.es.md  README.md  demo.tape  pyproject.toml
aismell/: __init__.py  biblio.py  cli.py  core.py  docx.py  pdf.py  picker.py  render.py
aismell/patterns/: en.yaml  es.yaml
demo/: aismell
docs/: CNAME  app.js  core.py  docx.py  embedding-analysis.js  index.html  research.md  sync.sh
docs/patterns/: en.yaml  es.yaml
docs/web/: app.js
examples/: clean-es.md  sample-en.md  sample-es.md  symmetric-es.md
packaging/: PKGBUILD
patterns/: en.yaml  es.yaml
tests/: _docx_builder.py  test_biblio.py  test_core.py  test_docx.py
tests/samples/: canary.json
web/: core.py  index.html  sync.sh
web/patterns/: en.yaml  es.yaml
